--- a/app.html
+++ b/app.html
@@ -30,19 +30,26 @@
     </form>
   </div>
 
+  <!-- Load mock data and login logic -->
+  <script src="/scripts/common.js"></script>
   <script>
-    document.getElementById('loginForm').addEventListener('submit', function(e) {
+    const loginForm = document.getElementById("loginForm");
+
+    loginForm?.addEventListener("submit", function (e) {
       e.preventDefault();
 
-      // Simulate login and workspace setup
-      const dummyWorkspaces = [
-        { name: "Acme Inc", plan: "Free", logoUrl: "" }
-      ];
-      localStorage.setItem('userWorkspaces', JSON.stringify(dummyWorkspaces));
-      localStorage.setItem('userPlan', "Free");
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
 
-      // Redirect to switch workspace
-      window.location.href = "/switch-workspace.html";
+      if (mockUsers[email]) {
+        const user = mockUsers[email];
+        localStorage.setItem("userPlan", user.plan);
+        localStorage.setItem("userWorkspaces", JSON.stringify(user.workspaces));
+        localStorage.setItem("activeUser", email);
+        window.location.href = "/switch-workspace.html";
+      } else {
+        alert("Invalid login: No matching user.");
+      }
     });
   </script>
 </body>
