--- a/switch-workspace.html
+++ b/switch-workspace.html
@@ -5,25 +5,97 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Switch Workspace - NexusTime</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-950 text-white font-sans">
-  <!-- Content omitted for brevity -->
+<body class="bg-gray-950 text-white font-inter">
+  <nav class="bg-gray-900 text-white py-3 shadow-md">
+    <div class="container mx-auto px-6 flex justify-between items-center">
+      <a href="/dashboard.html" class="text-xl font-bold text-emerald-400">NexusTime</a>
+      <div class="flex space-x-4 text-sm">
+        <a href="/dashboard.html" class="hover:text-emerald-400">Dashboard</a>
+        <a href="/schedule.html" class="hover:text-emerald-400">Schedule</a>
+        <a href="/timesheets.html" class="hover:text-emerald-400">Timesheets</a>
+        <a href="/workspace.html" class="hover:text-emerald-400">Workspace</a>
+        <a href="/employees.html" class="hover:text-emerald-400">Employees</a>
+        <a href="/manage.html" class="hover:text-emerald-400">Manage</a>
+        <a href="/timeoff.html" class="hover:text-emerald-400">Time Off</a>
+        <a href="/settings.html" class="hover:text-emerald-400">Settings</a>
+        <a href="/switch-workspace.html" class="hover:text-emerald-400 font-semibold">Switch Workspace</a>
+        <a href="/app.html" class="hover:text-emerald-400">Logout</a>
+      </div>
+    </div>
+  </nav>
 
-  <!-- Debugging script injected at bottom -->
+  <main class="p-6 max-w-6xl mx-auto">
+    <h1 class="text-2xl font-bold mb-6">Select a Workspace</h1>
+    <div id="workspaceList" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+    <div id="emptyState" class="text-gray-400 text-center hidden mt-10">No workspaces found. Please log in again or contact support.</div>
+  </main>
+
+  <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div class="bg-gray-900 p-6 rounded-xl max-w-sm w-full">
+      <h2 class="text-lg font-bold text-emerald-400 mb-4">Upgrade Required</h2>
+      <p class="text-sm text-gray-300 mb-4">Your current plan only supports one workspace. Upgrade to create more.</p>
+      <a href="/pricing.html" class="bg-emerald-500 hover:bg-emerald-400 text-white px-4 py-2 rounded">View Plans</a>
+      <button onclick="toggleModal(false)" class="text-sm text-gray-400 hover:underline mt-4 block">Cancel</button>
+    </div>
+  </div>
+
   <script>
-    console.log("[DEBUG] login script loaded");
+    let workspaces;
+    try {
+      workspaces = JSON.parse(localStorage.getItem('userWorkspaces')) || [];
+    } catch {
+      workspaces = [];
+    }
+    const planType = localStorage.getItem('userPlan') || 'Free';
+    const list = document.getElementById('workspaceList');
+    const empty = document.getElementById('emptyState');
 
-    const workspaces = localStorage.getItem("userWorkspaces");
-    const plan = localStorage.getItem("userPlan");
-    const user = localStorage.getItem("activeUser");
+    function selectWorkspace(name) {
+      localStorage.setItem('activeWorkspace', name);
+      window.location.href = '/dashboard.html';
+    }
 
-    console.log("[DEBUG] activeUser:", user);
-    console.log("[DEBUG] userPlan:", plan);
-    console.log("[DEBUG] userWorkspaces:", workspaces);
+    function toggleModal(show) {
+      document.getElementById('modal').classList.toggle('hidden', !show);
+    }
 
-    if (!workspaces || JSON.parse(workspaces).length === 0) {
-      console.warn("[WARNING] No workspaces found for user.");
-      alert("No workspaces found. Please check login or common.js");
+    if (workspaces.length === 0) {
+      empty.classList.remove('hidden');
+    } else {
+      for (const ws of workspaces) {
+        const div = document.createElement('div');
+        div.className = 'bg-gray-800 rounded-lg p-4 shadow hover:bg-gray-700 cursor-pointer';
+        div.innerHTML = `
+          <div class="flex items-center space-x-4 mb-3">
+            <img src="${ws.logoUrl || 'https://via.placeholder.com/40'}" alt="logo" class="w-10 h-10 rounded-full">
+            <div>
+              <h2 class="text-lg font-bold text-white">${ws.name}</h2>
+            </div>
+          </div>
+          <div class="text-sm text-gray-400 pl-1">
+            <p><strong>Users:</strong> ${ws.users}</p>
+            <p><strong>Industry:</strong> ${ws.industry}</p>
+            <p><strong>Timezone:</strong> ${ws.timezone}</p>
+            <p><strong>Created:</strong> ${ws.createdAt}</p>
+          </div>
+        `;
+        div.onclick = () => selectWorkspace(ws.name);
+        list.appendChild(div);
+      }
+
+      const addCard = document.createElement('div');
+      addCard.className = 'bg-gray-700 border-2 border-dashed border-emerald-400 p-4 text-center rounded-lg hover:bg-gray-600 cursor-pointer';
+      addCard.innerHTML = `
+        <h2 class="text-lg font-bold mb-2">+ Add New Workspace</h2>
+        <p class="text-sm text-gray-400">Create a new workspace</p>
+      `;
+      addCard.onclick = () => {
+        if (planType === 'Free' && workspaces.length >= 1) toggleModal(true);
+        else alert('TODO: Show new workspace creation modal');
+      };
+      list.appendChild(addCard);
     }
   </script>
 </body>
