--- a/app.html
+++ b/app.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - NexusTime</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-900 text-white">
-  <div class="min-h-screen flex items-center justify-center">
-    <div class="bg-gray-800 p-8 rounded shadow max-w-sm w-full">
-      <div class="flex justify-center mb-6">
-        <img src="https://raw.githubusercontent.com/Harveyp1/nexustime/main/nexustimelogo.png" alt="NexusTime Logo" class="h-12" />
-      </div>
-      <h2 class="text-xl font-bold mb-4 text-center">Login to NexusTime</h2>
-      <form id="loginForm" class="space-y-4">
-        <input type="email" id="email" placeholder="Email" required class="w-full p-2 rounded bg-gray-700 text-white" />
-        <input type="password" id="password" placeholder="Password" required class="w-full p-2 rounded bg-gray-700 text-white" />
-        <button type="submit" class="w-full bg-emerald-500 hover:bg-emerald-600 text-white font-semibold py-2 px-4 rounded">Login</button>
-      </form>
-      <div class="text-sm mt-4 text-center">
-        <a href="signup.html" class="text-emerald-400 hover:underline">Don't have an account? Sign Up</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NexusTime Login</title>
+    <link href="/styles/style.css" rel="stylesheet" />
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8Zs9Ls",
+        authDomain: "nexustime-e8b91.firebaseapp.com",
+        projectId: "nexustime-e8b91",
+        storageBucket: "nexustime-e8b91.appspot.com",
+        messagingSenderId: "516976739338",
+        appId: "1:516976739338:web:537ae732707a2a1aab4bf3",
+        measurementId: "G-QRSD6TYH86"
+      };
+      firebase.initializeApp(firebaseConfig);
+    </script>
+  </head>
+  <body class="bg-gray-900 text-white">
+    <div class="min-h-screen flex items-center justify-center">
+      <div class="w-full max-w-md bg-gray-800 p-6 rounded-lg shadow-md">
+        <h2 class="text-2xl font-semibold mb-4 text-center">Login to NexusTime</h2>
+        <form id="loginForm" class="space-y-4">
+          <div>
+            <label for="email" class="block mb-1">Email</label>
+            <input type="email" id="email" class="w-full p-2 rounded bg-gray-700 border border-gray-600" required />
+          </div>
+          <div>
+            <label for="password" class="block mb-1">Password</label>
+            <input type="password" id="password" class="w-full p-2 rounded bg-gray-700 border border-gray-600" required />
+          </div>
+          <button type="submit" class="w-full bg-emerald-500 hover:bg-emerald-600 text-white p-2 rounded">Login</button>
+        </form>
+        <div class="mt-4 text-center">
+          <a href="signup.html" class="text-sm text-emerald-400 hover:underline">Don't have an account? Sign up</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script type="module">
-    import { login } from '/scripts/auth.js';
-
-    const form = document.getElementById('loginForm');
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-
-      try {
-        const userCredential = await login(email, password);
-        const userId = userCredential.user.uid;
-        localStorage.setItem("uid", userId);
-        window.location.href = "/switch-workspace.html";
-      } catch (error) {
-        console.error("Login failed:", error);
-        alert("Login failed. Please check your credentials.");
-      }
-    });
-  </script>
-</body>
+    <script>
+      document.getElementById("loginForm").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+        try {
+          const userCredential = await firebase.auth().signInWithEmailAndPassword(email, password);
+          window.location.href = "/switch-workspace.html";
+        } catch (error) {
+          alert("Login failed: " + error.message);
+        }
+      });
+    </script>
+  </body>
 </html>
