--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NexusTime Login</title>
-    <link href="/styles/style.css" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
     <script>
@@ -20,22 +20,25 @@
       firebase.initializeApp(firebaseConfig);
     </script>
   </head>
-  <body class="bg-gray-900 text-white">
-    <div class="min-h-screen flex items-center justify-center">
-      <div class="w-full max-w-md bg-gray-800 p-6 rounded-lg shadow-md">
-        <h2 class="text-2xl font-semibold mb-4 text-center">Login to NexusTime</h2>
-        <form id="loginForm" class="space-y-4">
+  <body class="bg-gray-950 text-white font-inter">
+    <div class="min-h-screen flex items-center justify-center px-4">
+      <div class="w-full max-w-md bg-gray-900 p-8 rounded-2xl shadow-xl">
+        <div class="flex justify-center mb-6">
+          <img src="/nexustimelogo.png" alt="NexusTime Logo" class="w-20 h-20 rounded-full" />
+        </div>
+        <h2 class="text-3xl font-bold text-center text-emerald-400 mb-6">Welcome Back</h2>
+        <form id="loginForm" class="space-y-5">
           <div>
-            <label for="email" class="block mb-1">Email</label>
-            <input type="email" id="email" class="w-full p-2 rounded bg-gray-700 border border-gray-600" required />
+            <label for="email" class="block text-sm mb-1">Email</label>
+            <input type="email" id="email" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required />
           </div>
           <div>
-            <label for="password" class="block mb-1">Password</label>
-            <input type="password" id="password" class="w-full p-2 rounded bg-gray-700 border border-gray-600" required />
+            <label for="password" class="block text-sm mb-1">Password</label>
+            <input type="password" id="password" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required />
           </div>
-          <button type="submit" class="w-full bg-emerald-500 hover:bg-emerald-600 text-white p-2 rounded">Login</button>
+          <button type="submit" class="w-full py-3 bg-emerald-500 hover:bg-emerald-600 rounded-xl text-white font-semibold text-center">Login</button>
         </form>
-        <div class="mt-4 text-center">
+        <div class="mt-6 text-center">
           <a href="signup.html" class="text-sm text-emerald-400 hover:underline">Don't have an account? Sign up</a>
         </div>
       </div>
@@ -47,7 +50,7 @@
         const email = document.getElementById("email").value;
         const password = document.getElementById("password").value;
         try {
-          const userCredential = await firebase.auth().signInWithEmailAndPassword(email, password);
+          await firebase.auth().signInWithEmailAndPassword(email, password);
           window.location.href = "/switch-workspace.html";
         } catch (error) {
           alert("Login failed: " + error.message);
