--- a/app.html
+++ b/app.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
     <script>
       const firebaseConfig = {
         apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8Zs9Ls",
@@ -51,7 +52,9 @@
         const password = document.getElementById("password").value;
         try {
           await firebase.auth().signInWithEmailAndPassword(email, password);
-          window.location.href = "/switch-workspace.html";
+          const script = document.createElement("script");
+          script.src = "/scripts/check-workspace.js";
+          document.body.appendChild(script);
         } catch (error) {
           alert("Login failed: " + error.message);
         }
