--- a/onboarding.html
+++ b/onboarding.html
@@ -2,67 +2,106 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to NexusTime</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Onboarding - NexusTime</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8Zs9Ls",
+      authDomain: "nexustime-e8b91.firebaseapp.com",
+      projectId: "nexustime-e8b91",
+      storageBucket: "nexustime-e8b91.appspot.com",
+      messagingSenderId: "516976739338",
+      appId: "1:516976739338:web:537ae732707a2a1aab4bf3",
+      measurementId: "G-QRSD6TYH86"
+    };
+    firebase.initializeApp(firebaseConfig);
+  </script>
 </head>
-<body class="bg-gray-900 text-white">
-  <div class="min-h-screen flex items-center justify-center">
-    <div class="bg-gray-800 p-8 rounded shadow max-w-md w-full">
-      <h2 class="text-2xl font-bold text-center mb-6">Welcome to NexusTime 🎉</h2>
-      <form id="onboardingForm" class="space-y-4">
+<body class="bg-gray-950 text-white font-inter">
+  <div class="min-h-screen flex items-center justify-center px-4">
+    <div class="w-full max-w-2xl bg-gray-900 p-8 rounded-2xl shadow-xl">
+      <h2 class="text-3xl font-bold text-center text-emerald-400 mb-6">Create a New Workspace</h2>
+      <form id="onboardingForm" class="space-y-5">
         <div>
-          <label for="workspaceName" class="block mb-1 font-medium">Workspace Name</label>
-          <input id="workspaceName" type="text" required class="w-full p-2 rounded bg-gray-700 text-white" />
+          <label for="workspace" class="block text-sm mb-1">Workspace Name</label>
+          <input type="text" id="workspace" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required />
         </div>
+
         <div>
-          <label for="industry" class="block mb-1 font-medium">Industry</label>
-          <select id="industry" required class="w-full p-2 rounded bg-gray-700 text-white">
-            <option value="">Select Industry</option>
-            <option>Accounting</option>
-            <option>Agriculture</option>
-            <option>Architecture</option>
-            <option>Automotive</option>
-            <option>Construction</option>
-            <option>Consulting</option>
-            <option>Customer Service</option>
-            <option>Design</option>
-            <option>Education</option>
-            <option>Engineering</option>
-            <option>Entertainment</option>
-            <option>Finance</option>
-            <option>Food & Beverage</option>
-            <option>Government</option>
-            <option>Healthcare</option>
-            <option>Hospitality</option>
-            <option>Information Technology</option>
-            <option>Legal</option>
-            <option>Logistics</option>
-            <option>Manufacturing</option>
-            <option>Marketing</option>
-            <option>Media</option>
-            <option>Nonprofit</option>
-            <option>Pharmaceutical</option>
-            <option>Real Estate</option>
-            <option>Retail</option>
-            <option>Sales</option>
-            <option>Telecommunications</option>
-            <option>Transportation</option>
-            <option>Utilities</option>
-            <option>Other</option>
-          </select>
+          <label for="industry" class="block text-sm mb-1">Industry</label>
+          <select id="industry" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required></select>
         </div>
+
         <div>
-          <label for="timezone" class="block mb-1 font-medium">Timezone</label>
-          <select id="timezone" required class="w-full p-2 rounded bg-gray-700 text-white"></select>
+          <label for="companySize" class="block text-sm mb-1">Company Size</label>
+          <select id="companySize" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required></select>
         </div>
-        <button type="submit" class="w-full bg-emerald-500 hover:bg-emerald-600 text-white font-semibold py-2 px-4 rounded">Continue</button>
+
+        <div>
+          <label for="timezone" class="block text-sm mb-1">Time Zone</label>
+          <select id="timezone" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required></select>
+        </div>
+
+        <div>
+          <label for="plan" class="block text-sm mb-1">Plan</label>
+          <select id="plan" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-xl" required></select>
+        </div>
+
+        <div>
+          <label for="logo" class="block text-sm mb-1">Upload Logo (Optional - PNG 64x64)</label>
+          <input type="file" id="logo" accept="image/png" class="w-full bg-gray-800 text-white rounded-xl border border-gray-700 p-2" />
+          <p id="logoMsg" class="text-red-500 text-sm mt-1"></p>
+        </div>
+
+        <button type="submit" class="w-full py-3 bg-emerald-500 hover:bg-emerald-600 rounded-xl text-white font-semibold text-center">Create Workspace</button>
       </form>
     </div>
   </div>
 
-  <script type="module" src="/scripts/onboarding-inject.js"></script>
+  <script src="/scripts/company-options.js"></script>
+  <script src="/scripts/validate-logo-upload.js"></script>
+
+  <script>
+    document.getElementById("onboardingForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const user = firebase.auth().currentUser;
+      if (!user) return;
+
+      const db = firebase.firestore();
+      const storage = firebase.storage();
+      const workspaceName = document.getElementById("workspace").value;
+      const logoFile = document.getElementById("logo").files[0];
+
+      let logoUrl = "";
+      if (logoFile) {
+        const storageRef = storage.ref(`workspace-logos/${user.uid}-${Date.now()}.png`);
+        await storageRef.put(logoFile);
+        logoUrl = await storageRef.getDownloadURL();
+      }
+
+      const data = {
+        ownerId: user.uid,
+        name: workspaceName,
+        industry: document.getElementById("industry").value,
+        size: document.getElementById("companySize").value,
+        timezone: document.getElementById("timezone").value,
+        plan: document.getElementById("plan").value,
+        logoUrl: logoUrl,
+        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+      };
+
+      try {
+        await db.collection("workspaces").add(data);
+        window.location.href = "/switch-workspace.html";
+      } catch (error) {
+        alert("Failed to create workspace: " + error.message);
+      }
+    });
+  </script>
 </body>
 </html>
